# OpenFace

./: .gitmodules  CMakeLists.txt  README.md  download_models.sh
cmake/: OpenFaceConfig.cmake.in
python/: CMakeLists.txt
python/openface/: CMakeLists.txt  __init__.py  example.cpp  openface_python.cpp
python/openface/examples/: crop_impaciente.avi  crop_laugh.avi  test_video_ocv.py
python/openface/util/: conversions.h
